more notes